2018-05-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_formref.c (__libdw_formref): Explicitly don't handle
	DW_FORM_ref_sup4 and DW_FORM_ref_sup8.
	* dwarf_formref_die.c (dwarf_formref_die): Handle DW_FORM_ref_sup4
	and DW_FORM_ref_sup8.
	* dwarf_formstring.c (dwarf_formstring): Handle DW_FORM_strp_sup
	as DW_FORM_GNU_strp_alt.

2018-05-05  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DWARF line content descriptions.
	* libdwP.h (libdw_valid_user_form): New static function.
	* dwarf_getsrclines.c (read_srclines): Check and parse version 5
	DWARF header, dir and file tables separately from older versions
	where different.

2018-04-24  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (dwarf_scnnames): Add ".debug_line_str".
	* dwarf_error.c (errmsgs): Add DWARF_E_NO_DEBUG_STR and
	DWARF_E_NO_DEBUG_LINE_STR.
	* dwarf_formstring.c (dwarf_formstring): Handle DW_FORM_line_strp.
	Get data from either .debug_str or .debug_line_str.
	* libdwP.h: Add IDX_debug_line_str, DWARF_E_NO_DEBUG_STR and
	DWARF_E_NO_DEBUG_LINE_STR.

2018-04-03  Mark Wielaard  <mark@klomp.org>

	* dwarf_formudata.c (__libdw_formptr): Take and return const
	unsigned char pointers.
	* dwarf_getlocation.c (attr_base_address): Rename to...
	(__libdw_cu_base_address): this. Take Dwarf_CU, check and set
	base_address.
	(initial_offset_base): Renamed to...
	(initial_offset): this. Only provide offset.
	(getlocations_addr): Move data size check and
	address base addition into __libdw_read_begin_end_pair_inc. Use
	__libdw_cu_base_address and initial_offset. Drop Elf_Data NULL
	check (already done by initial_offset, through __libdw_formptr).
	(dwarf_getlocations): Use __libdw_cu_base_address and initial_offset.
	Drop Elf_Data NULL check.
	* dwarf_ranges.c (__libdw_read_begin_end_pair_inc): Change argument
	type of readp to Add readend argument. Check data size. Include base
	in begin and end result.
	(initial_offset): New static function.
	(dwarf_ranges): Don't check Elf_Data being NULL (already done by